manifests/cluster_init/nvidia-rag-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nvidia-rag-frontend-ui
  namespace: rag
spec:
  parentRefs:
    - name: warp-edge-gateway
      namespace: envoy-gateway-system
  hostnames:
    - nvfrontend.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rag-frontend
          port: 3000
